<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LegalEZApp</string>
    <string name="action_settings">Settings</string>
    <string name="camera">Take Picture</string>
    <string name="clear">Clear</string>
    <string name="enter">Enter Text</string>
    <string name="title_activity_enter_text_activty">EnterTextActivty</string>
    <string name="hello_world">Hello world!</string>
    <string name="process_image">Process Image</string>
    <string name="select_image">Select Image</string>
    <string name="title_activity_upload_image">UploadImageActivity</string>
    <string name="title">LegalEasy</string>
    <string name="translate">Translate</string>
    <string name="upload">Upload Image</string>
    <string name="title_activity_camera_image">CameraImageActivity</string>
    <string name="title_activity_result">ResultActivity</string>

</resources>
